[gd_scene load_steps=6 format=3 uid="uid://bijp8657mrvaa"]

[ext_resource type="Texture2D" uid="uid://c4y8tyajhj543" path="res://assets/Enemy/vanguard.png" id="1_cqnxb"]
[ext_resource type="Script" path="res://Vanguard.gd" id="1_i8lmu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o448"]
size = Vector2(59, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75uxq"]
size = Vector2(59, 42)

[sub_resource type="CircleShape2D" id="CircleShape2D_uqybl"]
radius = 90.0

[node name="Vanguard" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_i8lmu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_cqnxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(0.5, 11)
shape = SubResource("RectangleShape2D_2o448")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0.5, 11)
shape = SubResource("RectangleShape2D_75uxq")

[node name="site" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="site"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_uqybl")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="site" to="." method="_on_site_body_entered"]
[connection signal="body_exited" from="site" to="." method="_on_site_body_exited"]
